--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-includeFlat 'Grim Cuisine', 'Grim Decor', 'Grim Industry', 'Grim Life', 'Grim Weapons'
+includeFlat 'Grim Cuisine', 'Grim Decor', 'Grim Industry', 'Grim World', 'Grim Tools', 'Grim Util'
