Fix some configs and have build.gradle automatically add the custom lines to manifest. Also sync all versions since they are technically seperate mods but share one base file.

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,13 @@ dependencies {
 
 }
 
+jar {
+	manifest {
+        attributes 'FMLCorePlugin': 'com.grim3212.mc.world.asm.DesertGenLoadingPlugin'
+        attributes 'FMLCorePluginContainsFMLMod': 'true'
+    }
+}
+
 processResources
 {
     // this will ensure that this task is redone when the versions change.
