--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+// Based off of Pahimar's build file
+// https://github.com/pahimar/Equivalent-Exchange-3/blob/master/build.gradle
 
 // For those who want the bleeding edge
 buildscript {
@@ -14,50 +16,23 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-/*
-// for people who want stable - not yet functional for MC 1.8.8 - we require the forgegradle 2.1 snapshot
-plugins {
-    id "net.minecraftforge.gradle.forge" version "2.0.2"
-}
-*/
-version = "1.10.2-3.0.0.1"
-group= "com.grim3212.mc" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "Grim Pack"
+version = minecraft_version + "-" + mod_version
+group= mod_group
+archivesBaseName = mod_archives_base_name
 
 minecraft {
-    version = "1.10.2-12.18.1.2044"
+    version = minecraft_version + "-" + forge_version
     runDir = "run"
-    
-    // the mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   snapshot are built nightly.
-    // stable_#            stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not allways work.
-    // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20160725"
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+	
+	// Set mod version in code prior to compilation
+    replaceIn "GrimPack.java"
+    replace "@MOD_VERSION@", mod_version
+	
+    // Specify the mcp mappings to use
+    mappings = mcp_mappings_version
 }
 
 dependencies {
-    // you may put jars on which you depend on in ./libs
-    // or you may define them like so..
-    //compile "some.group:artifact:version:classifier"
-    //compile "some.group:artifact:version"
-      
-    // real examples
-    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-    // the 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
-    //provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // the deobf configurations:  'deobfCompile' and 'deobfProvided' are the same as the normal compile and provided,
-    // except that these dependencies get remapped to your current MCP mappings
-    //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-    //deobfProvided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // for more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
 }
 
