Add + support to iron and diamond workbenches. Closes #21

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,6 @@ mcp_mappings_version = snapshot_20160725
 mod_archives_base_name = Grim Pack
 mod_group = com.grim3212.mc
 mod_version = 3.4.6.13
+
+# Dependencies
+jei_version = 3.9.0.244
