--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,18 @@ minecraft {
     mappings = mcp_mappings_version
 }
 
-dependencies {
+repositories {
+  maven {
+    // location of the maven that hosts JEI files
+    url "http://dvs1.progwml6.com/files/maven"
+  }
+}
 
+dependencies {
+  // compile against the JEI API
+  deobfCompile "mezz.jei:jei_${minecraft_version}:${jei_version}:api"
+  // at runtime, use the full JEI jar
+  runtime "mezz.jei:jei_${minecraft_version}:${jei_version}"
 }
 
 processResources
