--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,13 @@
 # Build related properties
 minecraft_version = 1.10.2
-forge_version = 12.18.1.2039
+forge_version = 12.18.1.2053
 mcp_mappings_version = snapshot_20160725
 
 # Mod related properties
 mod_archives_base_name = Grim Pack
 mod_group = com.grim3212.mc
-mod_version = 3.4.6.15
+mod_version = 3.4.6.17
+mod_release_type = release
 
 # Dependencies
 jei_version = 3.9.0.244
