--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,21 @@ buildscript {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
+		maven {
+            // Required for the curseforge task
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
+		classpath "gradle.plugin.com.matthewprenger:CurseGradle:1.0.8"
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'com.matthewprenger.cursegradle'
+
+def Properties props = new Properties()
+props.load(new FileInputStream(new File('secrets.properties')))
 
 version = minecraft_version + "-" + mod_version
 group= mod_group
@@ -63,5 +72,19 @@ processResources
     // copy everything else, thats not the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
+    }
+}
+
+curseforge {
+    apiKey = props.curseforge_apikey
+    project {
+        id = props.grimpack_id
+		mainArtifact jar
+        releaseType = mod_release_type
+        changelogType = 'html'
+        changelog = file("changelog.html")
+        relations {
+            optionalLibrary 'jei'
+        }
     }
 }
