--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,11 @@ version = minecraft_version + "-" + mod_version
 group= mod_group
 archivesBaseName = mod_archives_base_name
 
+sourceCompatibility = targetCompatibility = "1.6" // Need this here so eclipse task generates correctly.
+compileJava {
+    sourceCompatibility = targetCompatibility = "1.6"
+}
+
 minecraft {
     version = minecraft_version + "-" + forge_version
     runDir = "run"
