--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,17 @@
 # Build related properties
-minecraft_version = 1.10.2
-forge_version = 12.18.2.2099
-mcp_mappings_version = snapshot_20160906
+minecraft_version = 1.11
+forge_version = 13.19.1.2189
+mcp_mappings_version = snapshot_20161213
 
 # Mod related properties
 mod_archives_base_name = Grim Pack
 mod_group = com.grim3212.mc
-mod_version = 3.4.17.52
+mod_version = 4.0.0.0
 mod_release_type = release
 
 # Dependencies
-jei_version = 3.12.3.292
+jei_version = 4.1.0.204
+
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
+# This is required to provide enough memory for the Minecraft decompilation process.
+org.gradle.jvmargs=-Xmx3G
