--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ mcp_mappings_version = snapshot_20161213
 # Mod related properties
 mod_archives_base_name = Grim Pack
 mod_group = com.grim3212.mc
-mod_version = 4.0.0.0
-mod_release_type = release
+mod_version = 4.0.0.0-alpha
+mod_release_type = alpha
 
 # Dependencies
 jei_version = 4.1.0.204
