--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ mcp_mappings_version = snapshot_20161213
 # Mod related properties
 mod_archives_base_name = Grim Pack
 mod_group = com.grim3212.mc
-mod_version = 4.0.0.0-alpha
+mod_version = 4.0.0.0-alpha.1
 mod_release_type = alpha
 
 # Dependencies
