--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ mcp_mappings_version = snapshot_20161220
 # Mod related properties
 mod_archives_base_name = Grim Pack
 mod_group = com.grim3212.mc
-mod_version = 4.0.0.0-alpha.3
-mod_release_type = alpha
+mod_version = 4.0.0.0-beta
+mod_release_type = beta
 
 # Dependencies
 jei_version = 4.2.2.215
