--- a/package.json
+++ b/package.json
@@ -13,26 +13,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.3.1",
-    "@angular/compiler": "^2.3.1",
-    "@angular/core": "^2.3.1",
-    "@angular/forms": "^2.3.1",
-    "@angular/http": "^2.3.1",
-    "@angular/platform-browser": "^2.3.1",
-    "@angular/platform-browser-dynamic": "^2.3.1",
-    "@angular/router": "^3.3.1",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.19",
+    "@angular/common": "^4.0.0-beta.6",
+    "@angular/compiler": "^4.0.0-beta.6",
+    "@angular/compiler-cli": "^4.0.0-beta.6",
+    "@angular/core": "^4.0.0-beta.6",
+    "@angular/forms": "^4.0.0-beta.6",
+    "@angular/http": "^4.0.0-beta.6",
+    "@angular/material": "^2.0.0-beta.1",
+    "@angular/platform-browser": "^4.0.0-beta.6",
+    "@angular/platform-browser-dynamic": "^4.0.0-beta.6",
+    "@angular/router": "^4.0.0-beta.6",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.20",
     "core-js": "^2.4.1",
-    "rxjs": "^5.0.1",
+    "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.3.1",
+    "@angular/compiler-cli": "^4.0.0-beta.6",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.26",
-    "codelyzer": "~2.0.0-beta.1",
+    "codelyzer": "~2.0.0-beta.4",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
