--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": ">=4.0.0-beta <5.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.20",
     "core-js": "^2.4.1",
+    "ng2-page-scroll": "^4.0.0-beta.4",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
