--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 # Build related properties
 minecraft_version = 1.11.2
-forge_version = 13.20.0.2218
+forge_version = 13.20.0.2230
 mcp_mappings_version = snapshot_20161220
 
 # Mod related properties
 mod_archives_base_name = Grim Pack
 mod_group = com.grim3212.mc
-mod_version = 4.0.0.0-beta
+mod_version = 4.0.0.0-beta.1
 mod_release_type = beta
 
 # Dependencies
