Change update URL and website and start getting ready for release

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ mcp_mappings_version = snapshot_20161220
 # Mod related properties
 mod_archives_base_name = Grim Pack
 mod_group = com.grim3212.mc
-mod_version = 4.0.0.0-beta.1
-mod_release_type = beta
+mod_version = 4.0.0.0
+mod_release_type = release
 
 # Dependencies
 jei_version = 4.2.2.215
