--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,7 @@ curseforge {
         id = props.grimpack_id ? props.grimpack_id : '0'
 		mainArtifact jar
         releaseType = mod_release_type
+		addGameVersion '1.12'
         changelogType = 'html'
         changelog = file("changelog.html")
         relations {
