--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,17 @@ minecraft {
 repositories {
   maven {
     // location of the maven that hosts JEI files
-    url "http://dvs1.progwml6.com/files/maven"
+    name = "Progwml6 maven"
+    url = "http://dvs1.progwml6.com/files/maven"
+  }
+  maven {
+    // location of a maven mirror for JEI files, as a fallback
+    name = "ModMaven"
+    url = "modmaven.k-4u.nl"
+  }
+  maven { // JustEnoughResources
+        name = "bintray-way2muchnoise"
+        url  "https://dl.bintray.com/way2muchnoise/dev/"
   }
 }
 
@@ -56,6 +66,8 @@ dependencies {
   deobfCompile "mezz.jei:jei_${minecraft_version}:${jei_version}:api"
   // at runtime, use the full JEI jar
   runtime "mezz.jei:jei_${minecraft_version}:${jei_version}"
+  
+  provided "jeresources:JustEnoughResources-${minecraft_version}:${jer_version}:deobf"
 }
 
 processResources
