--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Build related properties
-minecraft_version = 1.12.1
-forge_version = 14.22.0.2456
+minecraft_version = 1.12.2
+forge_version = 14.23.0.2493
 mcp_mappings_version = snapshot_20170624
 
 # Mod related properties
@@ -10,7 +10,8 @@ mod_version = 5.1.3.43
 mod_release_type = release
 
 # Dependencies
-jei_version = 4.7.5.88
+jei_version = 4.7.11.101
+jer_version = 0.8.5.26
 
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
