--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 # Build related properties
-# minecraft_version = 1.12.2
-# forge_version = 14.23.4.2747
-# mcp_mappings_version = snapshot_20180331
+minecraft_version = 1.13.2
+forge_version = 25.0.73
+mcp_mappings_version = 20190308-1.13.1
 
 # Mod related properties
-# mod_archives_base_name = Grim Pack
-# mod_group = com.grim3212.mc
-# mod_version = 6.0.0.6
+mod_archives_base_name = Grim Pack
+mod_group = com.grim3212.mc
+mod_version = 7.0.0.0
 # mod_release_type = release
 
 # Dependencies
