--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
+apply plugin: 'maven-publish'
 
 version = minecraft_version + "-" + mod_version
 group = mod_group
@@ -19,8 +20,6 @@ archivesBaseName = mod_archives_base_name
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
 minecraft {
-    // Use non-default mappings at your own risk. they may not always work.
-    // Simply re-run your setup task after changing the mappings to update your workspace.
     mappings channel: 'snapshot', version: mcp_mappings_version
 
     // Default run configurations.
@@ -57,8 +56,8 @@ minecraft {
                 }
             }
         }
-		
-		data {
+
+        data {
             workingDirectory project.file('run')
 
             // Recommended logging data for a userdev environment
@@ -79,8 +78,6 @@ minecraft {
 }
 
 dependencies {
-    // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
-    // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
-    // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:' + minecraft_version + '-' + forge_version
+
 }
